--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         }
     </style>
 </head>
-
 <body>
     <p id="color">#000000</p>
+    <p id="text_color">Red color</p>
     <script>
         function randomInt(min, max) {
             return Math.floor(Math.random() * (max - min + 1) + min);
